workspace_output_1766722562_2362.txt
  File "<string>", line 9
    print(f'App title: {app.title if hasattr(app, title) else Not
          ^
SyntaxError: unterminated string literal (detected at line 9)
